# sphinxcontrib-vai

./: README.org  pyproject.toml
sphinxcontrib/vai/: pandoc_s2s.py
tests/: test_sphinxcontrib_vai.py
