[tool.poetry]
name = "sphinxcontrib-vai"
version = "0.1.0"
description = "Sphinx extensions"
authors = ["Abhinav Tushar <lepisma@fastmail.com>"]
packages = [{ include = "sphinxcontrib/vai" }]

[tool.poetry.dependencies]
python = "^3.6"
pypandoc = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
